upadte workflow and import new wallet adapter with backend files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,34 @@
-PORT=3001
-NODE_ENV=development
-
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/stellar_escrow
-
+# Stellar Network Configuration
 STELLAR_NETWORK=testnet
 STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
+STELLAR_NETWORK_PASSPHRASE=Test SDF Network ; February 2021
+STELLAR_FRIENDBOT_URL=https://friendbot.stellar.org
 
-CONTRACT_ID=
-TOKEN_ADDRESS=NATIVE
+# Contract Configuration
+CONTRACT_ID=your_soroban_contract_id_here
+TOKEN_ADDRESS=native
 USE_REAL_CONTRACT=false
+
+# Database Configuration (PostgreSQL for Supabase)
+DATABASE_URL=postgresql://user:password@localhost:5432/stellar_escrow
+
+# Supabase Configuration (Optional - for real Supabase)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
+# Server Configuration
+PORT=3001
+NODE_ENV=development
+LOG_LEVEL=info
+
+# Agent Configuration
+ENABLE_AUTO_APPROVAL_AGENT=true
+ENABLE_SYNC_AGENT=true
+ENABLE_FEEDBACK_AGENT=true
+AGENT_CHECK_INTERVAL_MINUTES=5
+AUTO_APPROVE_AFTER_DEADLINE=true
+
+# Deployment targets
+VERCEL_TOKEN=your_vercel_token
+RENDER_API_KEY=your_render_api_key
