--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,14 @@
+# Backend API Configuration
 VITE_API_URL=http://localhost:3001
+
+# Stellar Network Discovery
+VITE_STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
 VITE_STELLAR_NETWORK=testnet
+
+# Wallet Configuration (if needed)
+VITE_FREIGHTER_ENABLED=true
+
+# Feature Flags
+VITE_ENABLE_FEEDBACK=true
+VITE_ENABLE_REPUTATION=true
+VITE_ENABLE_AGENT_MONITORING=true
