--- a/backend/package.json
+++ b/backend/package.json
@@ -6,20 +6,20 @@
     "dev": "node --watch src/server.js",
     "start": "node src/server.js",
     "agent": "node src/agents/auto-approval.js",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:deploy": "prisma migrate deploy",
-    "prisma:studio": "prisma studio"
+    "agent:sync": "node src/agents/event-sync.js",
+    "agent:feedback": "node src/agents/feedback-analyzer.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
     "@stellar/stellar-sdk": "^12.3.0",
+    "@supabase/supabase-js": "^2.43.0",
     "express": "^4.21.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "uuid": "^9.0.0",
+    "axios": "^1.7.0",
+    "pg": "^8.12.0"
   },
-  "devDependencies": {
-    "prisma": "^5.22.0"
-  }
+  "devDependencies": {}
+
 }
